Added following and followers to the profile model

--- a/insta/templates/registration/base.html
+++ b/insta/templates/registration/base.html
@@ -1,3 +1,4 @@
+{% load static %}   
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +13,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css" rel="stylesheet"><br />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
  {% block content %}  {% endblock  %}
@@ -23,7 +25,11 @@
 
 
 
-    {%  block scripts %}
+
+
+
+
+ {%  block scripts %}
     <!-- jQuery -->
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
