--- a/insta/templates/registration/registration_form.html
+++ b/insta/templates/registration/registration_form.html
@@ -1,25 +1,31 @@
-{%extends "registration/base.html"%} {% load bootstrap3 %}
-{% block content %}
+{%extends "registration/base.html"%} {% load bootstrap3 %}{% load static %}   
+{% block content %}    
 <div class="container">
     <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                    <img src="{% static 'home.png' %}" alt="logo" style="margin-left:20px;height: 400;width: 450;">
+            </div>
+            
+        </div>
         <div class="col-md-6">
             {% if form.errors %}
             <p class="alert alert-danger">Some Information may be incorrect</p>
             {% endif %}
 
-            <div class="card card-cascade  wider">
+            <div class="card card-cascade">
                 <div class="card-body card-body-cascade ">
-                    <h4 class="card-title blue-text pb-2 text-center">Instagram</h4>
-                    <br>
+                        <h1 class="text black-text card-header text-center"style="font-family: 'Lobster Two', cursive;">Instagram</h1> <br>
                     <h5 class="card-header info-color white-text text-center py-4">
                         <strong>Sign in</strong>
                     </h5>
-                    <form action="/accounts/register/" method="POST"  style="color:#757575;">
+                    <form action="/accounts/register/" method="POST" style="color:#757575;">
                         {% csrf_token %}
                         {% bootstrap_form form %}
 
                         <div class="form-group">
-                            <input type="submit" class="btn btn-info btn-md text-center" value="Sign Up" style="text-align:center;">
+                            <input type="submit" class="btn btn-info btn-md text-center" value="Sign Up"
+                                style="text-align:center;"> 
                         </div>
                         <input type="hidden" name="next" value="{{next}}">
                     </form>
@@ -29,8 +35,4 @@
     </div>
 
 </div>
-
-
-
-
 {% endblock %}
