--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -1,6 +1,23 @@
 {%extends "registration/base.html"%}
 {% load bootstrap3 %}
 {% block content %}
+<style>
+    ul {
+        display: inline-block;
+
+    }
+
+    li {
+        text-align: center;
+        display: inline-block;
+        margin-right: 10px;
+        padding: 10px;
+    }
+
+    ul>li>a {
+        text-decoration: none;
+    }
+</style>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
@@ -12,48 +29,66 @@
                     </div>
                     <div class="col-md-6">
                         <img src="https://www.instagram.com/static/images/homepage/screenshot5.jpg/0a2d3016f375.jpg"
-                            alt="" style="margin-left:20px;">
+                            alt="" style="margin-left:40px;">
                     </div>
                 </div>
 
-            </div>
-            <div class="panel panel-default">
-                <h4 class="text-center text-muted">Don't have an account?</h4>
-               
+                <h4 class="text-muted text-center blue-text">Get the App</h4>
+                <hr>
+                <div class="badge" style="display:flex;flex-direction:row;justify-content:space-around;">
+                    <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img
+                            src="https://www.steamyconcepts.com/wp-content/uploads/Steamy-Concepts-Mobile-App-Store-Apple-iOS.png"
+                            style="height:70px;width:200px;"></a>
+                    <a href="https://play.google.com/store?hl=en"><img
+                            src="https://play.google.com/intl/en/badges/images/generic/en_badge_web_generic.png"
+                            style="height:70px;width:200px;"></a>
+                    <hr>
+                    <br>
+                </div>
+
             </div>
         </div>
         <div class="col-md-6">
-                {% if form.errors %}
-                <p class="alert alert-danger">Some Information may be incorrect</p>
-                {% endif %}
-        
-        
-                <div class="card card-cascade  wider">
-                    <div class="card-body card-body-cascade ">
-                        <h1 class="text black-text card-header text-center" style="font-family: 'Lobster Two', cursive;">
-                            Instagram</h1> <br>
-                        <br>
-                        <h5 class="card-header info-color white-text text-center py-4">
-                            <strong>Sign In</strong>
-                        </h5>
-                        <form action="/accounts/register/" method="POST" style="color:#757575;">
-                            {% csrf_token %}
-                            {% bootstrap_form form %}
-        
-                            <div class="form-group">
-                                <input type="submit" class="btn btn-info btn-md text-center" value="Sign In"
-                                    style="text-align:center;">
-                            </div>
-                            <input type="hidden" name="next" value="{{next}}">
-                        </form>
+            {% if form.errors %}
+            <p class="alert alert-danger">Some Information may be incorrect</p>
+            {% endif %}
+
+
+            <div class="card card-cascade  wider">
+                <div class="card-body card-body-cascade ">
+                    <h1 class="text black-text card-header text-center text-muted"
+                        style="font-family: 'Lobster Two', cursive;">
+                        Instagram</h1> <br>
+                    <br>
+                    <h5 class="card-header info-color white-text text-center py-4">
+                        <strong>Sign In</strong>
+                    </h5>
+                    <form action="/accounts/register/" method="POST" style="color:#757575;">
+                        {% csrf_token %}
+                        {% bootstrap_form form %}
+
+                        <div class="form-group">
+                            <input type="submit" class="btn btn-outline-info btn-rounded waves-effect text-center" value="Log In"
+                                style="text-align:center;">
+                        </div>
+                        <input type="hidden" name="next" value="{{next}}">
+                    </form>
+                    <div class="panel panel-default text-center">
+                        <hr>
+                        <h4 class="text-center text-muted">Don't have an account?</h4>
+                        <a href="/accounts/register" class="btn btn-info btn-md text-center">Sign Up Here</a>
+
                     </div>
                 </div>
             </div>
+        </div>
     </div>
-    
-</div>
-</div>
 
+</div>
+</div>
+<br>
+<br>
+<br>
 
 
 
