--- a/insta/templates/registration/registration_form.html
+++ b/insta/templates/registration/registration_form.html
@@ -10,10 +10,31 @@
                             alt="logo" style="margin-left:20px;height: 400;width: 450;">
                     </div>
                     <div class="col-md-6">
-                        <img src="https://www.instagram.com/static/images/homepage/screenshot5.jpg/0a2d3016f375.jpg" alt="">
+                        <img src="https://www.instagram.com/static/images/homepage/screenshot5.jpg/0a2d3016f375.jpg"
+                            alt="" style="margin-left:40px;">
                     </div>
                 </div>
 
+                <div class="panel panel-default text-center">
+                    <hr>
+                    <h4 class="text-center text-muted">Already have an account?</h4>
+                    <a href="/accounts/login" class="btn btn-info btn-md text-center">Log In</a>
+
+                </div>
+
+            </div>
+            <br>
+            <h4 class="text-muted text-center blue-text">Get the App</h4>
+            <hr>
+            <div class="badge" style="display:flex;flex-direction:row;justify-content:space-around;">
+                <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img
+                        src="https://www.steamyconcepts.com/wp-content/uploads/Steamy-Concepts-Mobile-App-Store-Apple-iOS.png"
+                        style="height:70px;width:200px;"></a>
+                <a href="https://play.google.com/store?hl=en"><img
+                        src="https://play.google.com/intl/en/badges/images/generic/en_badge_web_generic.png"
+                        style="height:70px;width:200px;"></a>
+                <hr>
+                <br>
             </div>
 
         </div>
