--- a/insta/templates/base.html
+++ b/insta/templates/base.html
@@ -1,4 +1,3 @@
-{%extends "base.html"%}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -36,6 +35,8 @@
 </style>
 
 <body>
+
+{% include 'navbar.html' %}
 
   {% block content %} {% endblock  %}
 
