--- a/insta/templates/users/profile.html
+++ b/insta/templates/users/profile.html
@@ -1,2 +1,16 @@
 {%extends "base.html"%}
-<h1>{{user.email}}</h1>
+{% block content %}
+<div class="content-section">
+<div class="media">
+<img src="{{ user.profile.profile_photo.url }}" alt="logo" class="rounded-circle">
+<div class="media-body">
+<h2 class="acccount-heading">{{user.username}}</h2>
+<p class="text-primary">{{user.email}}</p>
+</div>
+</div>
+</div>
+
+
+
+
+{% endblock %}
