--- a/insta/templates/users/profile.html
+++ b/insta/templates/users/profile.html
@@ -1,13 +1,13 @@
 {%extends "base.html"%}
 {% block content %}
 <div class="content-section">
-<div class="media">
-<img src="{{ user.profile.profile_photo.url }}" alt="logo" class="rounded-circle">
-<div class="media-body">
-<h2 class="acccount-heading">{{user.username}}</h2>
-<p class="text-primary">{{user.email}}</p>
-</div>
-</div>
+    <div class="media">
+        <img src="{{ user.profile_photo.url }}" alt="logo" class="rounded-circle">
+        <div class="media-body">
+            <h2 class="acccount-heading">{{user.username}}</h2>
+            <p class="text-primary">{{user.email}}</p>
+        </div>
+    </div>
 </div>
 
 
