--- a/insta/templates/users/profile.html
+++ b/insta/templates/users/profile.html
@@ -1,4 +1,5 @@
 {%extends "base.html"%}
+{% load bootstrap3 %}
 {% block content %}
 <div class="content-section">
     <div class="media">
@@ -9,7 +10,24 @@
         </div>
     </div>
 </div>
+<div class="card card-cascade">
+    <div class="card-body card-body-cascade ">
+        <h1 class="text black-text card-header text-center" style="font-family: 'Lobster Two', cursive;">
+            Update Profile</h1> <br>
 
+        <form action="/accounts/register/" method="POST" style="color:#757575;" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% bootstrap_form u_form %}
+            {% bootstrap_form p_form %}
+
+            <div class="form-group">
+                <input type="submit" class="btn btn-info btn-md text-center" value="Update"
+                    style="text-align:center;">
+            </div>
+            <input type="hidden" name="next" value="{{next}}">
+        </form>
+    </div>
+</div>
 
 
 
