Styled the profile page

--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -1,5 +1,5 @@
 <!--Navbar -->
-<nav class="mb-1 navbar navbar-expand-lg navbar-light default-color">
+<nav class="mb-1 navbar navbar-expand-lg navbar-light color=#f9fbe7">
         <a class="navbar-brand" href="#"><i class="fab fa-instagram">Instagram</i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
           aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
