--- a/insta/templates/base.html
+++ b/insta/templates/base.html
@@ -36,9 +36,49 @@
 
 <body>
 
-{% include 'navbar.html' %}
+<!--Navbar -->
+<nav class="mb-1 navbar navbar-expand-lg navbar-light color=#f9fbe7">
+  <a class="navbar-brand text-color=#ED4264" href="#"><i class="fab fa-instagram">Instagram</i></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+    aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+    <ul class="navbar-nav mr-auto">
+    </ul>
+    <ul class="navbar-nav ml-auto nav-flex-icons">
+      <li class="nav-item">
+        <a class="nav-link waves-effect waves-light">
+          <i class="fab fa-twitter"></i>
+        </a>
+      </li>
+     
+      {% if user.is_authenticated %}
+      <li class="nav-item">
+              <a class="nav-link waves-effect waves-light">
+                <i class="fa  fa-user"></i>
+              </a>
+            </li>
+      {% else %}
 
-  {% block content %} {% endblock  %}
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-user"></i>
+        </a>
+    </ul>
+    {% endif %}
+  </div>
+</nav>
+<!--/.Navbar -->
+
+
+
+
+
+
+
+ {% block content %} {% endblock  %}
 
 
 
