--- a/insta/templates/home.html
+++ b/insta/templates/home.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-title">
                 <img src="{{user.profile.profile_photo.url}}" alt="" width="30" height="40"> 
-                <a href=""></a>
+                <a href="">{{user.profile.user}}</a>
             </div>
             <div class="card-img-top ">
                 <img src="{{image.image.url}}" alt="" class="rgba-red-slight img-fluid" width="500" height="600">
