--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -14,7 +14,7 @@
   <nav style="background-color:white;">
     <div class="navbar mx-5">
       <div class="navbar-brand">
-        <i class="fab fa-instagram" style="font-size:30px;" id="heading">Instagram</i>
+        <a href="{% url 'home' %}"><i class="fab fa-instagram" style="font-size:30px;" id="heading" >Instagram</i></a>
 
       </div>
       <div class="nav-search">
