--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -66,7 +66,7 @@
                     <h5 class="card-header info-color white-text text-center py-4">
                         <strong>Sign In</strong>
                     </h5>
-                    <form action="/accounts/register/" method="POST" style="color:#757575;">
+                    <form action="/accounts/login/" method="POST" style="color:#757575;">
                         {% csrf_token %}
                         {% bootstrap_form form %}
 
@@ -74,7 +74,7 @@
                             <input type="submit" class="btn btn-outline-info btn-rounded waves-effect text-center" value="Log In"
                                 style="text-align:center;">
                         </div>
-                        <input type="hidden" name="next" value="{{next}}">
+                        <input type="hidden" name="next" value="/">
                     </form>
                     <div class="panel panel-default text-center">
                         <hr>
