--- a/insta/templates/explore.html
+++ b/insta/templates/explore.html
@@ -1,1 +1,17 @@
 {% extends 'base.html' %} 
+{% block content %}
+<div style="margin:10%" >
+<div class="row">
+        {% for image in images %}
+        <div class="col-md-4">
+            <div style="margin:5px;" class="card-deck animated zoomInRight mb-10" >
+                <div class="card-img-top ">
+                    <img src="{{image.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350">
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    
+    </div>
+</div>
+    {% endblock %}
