--- a/insta/templates/uploads.html
+++ b/insta/templates/uploads.html
@@ -2,25 +2,29 @@
 {% load bootstrap3%}
 {% block content %}
 <div class="row">
+    <div class="col-md-4">
 
+    </div>
+    <div class="col-md-6">
         <div class="card card-cascade  wider text-center">
-        <div class="card-body card-body-cascade ">
-            <h1 class=" card-header text-center pink-text"
-                style="font-family: 'Lobster Two', cursive;">
-                Upload Images</h1> <br>
-            <br>
-            <form action="{% url 'uploads' % }" method="POST" style="color:#757575;" enctype="multipart/form-data">
-                {% csrf_token %}
-                {% bootstrap_form upload_form %}
-
-                <div class="form-group">
+            <div class="card-body card-body-cascade ">
+                <h1 class=" card-header text-center pink-text" style="font-family: 'Lobster Two', cursive;">
+                    Upload Images</h1> <br>
+                <br>
+                <form action="{% url 'post_image' % }" method="POST" style="color:#757575;" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% bootstrap_form upload_form %}
+        
+                        <div class=" form-group">
                     <input type="submit" class="btn btn-pink btn-md text-center" value="Upload"
                         style="text-align:center;">
-                </div>
-              
+            </div>
+            {{form.media}}  
             </form>
-            {{form.media}}
+       
+        </div>
+    </div>
 </div>
-</div>
+
 </div>
 {% endblock %}
