--- a/insta/templates/users/profile.html
+++ b/insta/templates/users/profile.html
@@ -44,6 +44,7 @@
                     <p class="font3">{{profile_details.bio|safe}}</p>
                     {% if profile.username == user.username %}
                     <a class="newpost mr-5" id="post" href="{% url 'post_image' %}" >+ NEW POST</a>
+                    <a class="newpost mr-5" id="post" href="{% url 'update_profile' %}" >Edit Profile</a>
                     {% endif %} 
                 </div>
             </div>
@@ -56,7 +57,7 @@
         <div class="col-md-4">
             <div class="card animated zoomInRight">
                 <div class="card-img-top ">
-                    <img src="{{img.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350">
+                    <img src="{{img.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350"   data-toggle="modal" data-target="#myModal{{image.id}}">
                 </div>
               
             </div>
@@ -85,3 +86,41 @@
   </div>
 </div>
 {% endblock %}
+{% for image in images %}
+<div class="modal fade" id="myModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-notify modal-danger white-text" role="document">
+  
+    <div class="modal-content">
+   
+      <div class="modal-header">
+            <img src="{{user.profile.profile_photo.url}}" alt="" width="40" height="45"
+            >
+          <a href="{% url 'profile' username=image.profile.username %}" class="white-text">{{image.profile}}</a>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true" class="white-text">&times;</span>
+        </button>
+      </div>
+
+      <!--Body-->
+      <div class="modal-body">
+        <div class="text-center">
+        
+                <i class= "far fa-spinner mb-3 animated fadeOut"></i>
+                <img src="{{image.image.url}}" alt="" class="rgba-red-slight i text-center" width="-485" height="400">
+                <br>
+               <h4 class="pink-text">{{image.image_caption}}</h4>
+        </div>
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center">
+       
+      
+      </div>
+    </div>
+    <!--/.Content-->
+  </div>
+</div>
+<!-- Central Modal Medium Info-->
+        {% endfor %}
