--- a/insta/templates/base.html
+++ b/insta/templates/base.html
@@ -6,7 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Instagram</title>
+  <link rel="icon" type="image/ico" href="https://instagram-brand.com/wp-content/uploads/2016/11/Instagram_AppIcon_Aug2017.png?w=300" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +42,10 @@
 
 
 <body>
-    <div class="se-pre-con"></div>
+    <div id="mdb-preloader" class="flex-center">
+        <div id="preloader-markup">
+        </div>
+      </div>
 
 
 {% include 'navbar.html' %}
