--- a/insta/templates/explore.html
+++ b/insta/templates/explore.html
@@ -1,17 +1,55 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% block content %}
-<div style="margin:10%" >
-<div class="row">
+<div style="margin:10%">
+    <div class="row">
         {% for image in images %}
         <div class="col-md-4">
-            <div style="margin:5px;" class="card-deck animated zoomInRight mb-10" >
+            <div style="margin:5px;" class="card-deck animated fadeInRight mb-10">
                 <div class="card-img-top ">
-                    <img src="{{image.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350">
+                    <img src="{{image.image.url}}" alt="" class="rgba-red-slight i" width="100%" height="350"
+                        data-toggle="modal" data-target="#myModal{{image.id}}">
                 </div>
             </div>
         </div>
         {% endfor %}
-    
+        {% for image in images %}
+        <div class="modal fade" id="myModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-notify modal-danger white-text" role="document">
+          
+            <div class="modal-content">
+           
+              <div class="modal-header">
+                    <img src="{{user.profile.profile_photo.url}}" alt="" width="60" height="50"
+                    >
+                  <a href="{% url 'profile' username=image.profile.username %}" class="white-text">{{image.profile}}</a>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+              </div>
+        
+              <!--Body-->
+              <div class="modal-body">
+                <div class="text-center">
+                
+                        <i class= "far fa-spinner mb-3 animated fadeOut"></i>
+                        <img src="{{image.image.url}}" alt="" class="rgba-red-slight i text-center" width="-485" height="400">
+                        <br>
+                       <h4 class="pink-text">{{image.image_caption}}</h4>
+                </div>
+              </div>
+        
+              <!--Footer-->
+              <div class="modal-footer justify-content-center">
+               
+              
+              </div>
+            </div>
+            <!--/.Content-->
+          </div>
+        </div>
+        <!-- Central Modal Medium Info-->
+                {% endfor %}
     </div>
 </div>
-    {% endblock %}
+{% endblock %}
