--- a/insta/templates/registration/registration_form.html
+++ b/insta/templates/registration/registration_form.html
@@ -3,28 +3,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <div class="card">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="https://www.instagram.com/static/images/homepage/screenshot1.jpg/d6bf0c928b5a.jpg"
-                            alt="logo" style="margin-left:20px;height: 400;width: 450;">
-                    </div>
-                    <div class="col-md-6">
-                        <img src="https://www.instagram.com/static/images/homepage/screenshot5.jpg/0a2d3016f375.jpg"
-                            alt="" style="margin-left:40px;">
-                    </div>
-                </div>
 
-                <div class="panel panel-default text-center">
-                    <hr>
-                    <h4 class="text-center text-muted">Already have an account?</h4>
-                    <a href="/accounts/login" class="btn btn-info btn-md text-center">Log In</a>
-
-                </div>
-
-            </div>
-            <br>
-            
+            <img src="https://d1o422jskmy5yw.cloudfront.net/wp-content/uploads/2017/08/instagram-celebs-PAGE-2017.gif" alt="" height="500" width="550" style="border-radius:60px;">
 
         </div>
         <div class="col-md-6">
@@ -32,12 +12,11 @@
             <p class="alert alert-danger">Some Information may be incorrect</p>
             {% endif %}
 
-            <div class="card card-cascade">
+            <div class="card card-cascade animated slideInDown"  >
                 <div class="card-body card-body-cascade ">
-                    <h1 class="text black-text card-header text-center" style="font-family: 'Lobster Two', cursive;">
-                        Instagram</h1> <br>
-                      
-                    <h5 class="card-header info-color white-text text-center py-4">
+
+                    <h5 class="card-header  white-text text-center py-4" style="background: rgb(131,58,180);
+                    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,88,31,1) 65%, rgba(253,29,29,1) 74%, rgba(253,52,35,1) 78%, rgba(253,62,30,1) 85%, rgba(252,176,69,1) 100%);">
                         <strong>Sign in</strong>
                     </h5>
                     <br>
@@ -46,26 +25,22 @@
                         {% bootstrap_form form layout='inline' %}
 
                         <div class="form-group">
-                            <input type="submit" class="btn btn-info btn-md text-center" value="Sign Up"
+                            <input type="submit" class="btn btn-pink btn-md text-center" value="Sign Up"
                                 style="text-align:center;">
                         </div>
                         <input type="hidden" name="next" value="{{next}}">
                     </form>
+
+                <div class="panel panel-default text-center">
+                        <hr>
+                        <h4 class="text-center text-muted pull-left">Already have an account?</h4>
+                        <a href="/accounts/login" class="btn btn-pink btn-md text-center">Log In</a>
+    
+                    </div>
+    
                 </div>
-                <h4 class="text-muted text-center blue-text">Get the App</h4>
-            <hr>
-            <div class="badge" style="display:flex;flex-direction:row;justify-content:space-around;">
-                <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img
-                        src="https://www.steamyconcepts.com/wp-content/uploads/Steamy-Concepts-Mobile-App-Store-Apple-iOS.png"
-                        style="height:70px;width:200px;"></a>
-                <a href="https://play.google.com/store?hl=en"><img
-                        src="https://play.google.com/intl/en/badges/images/generic/en_badge_web_generic.png"
-                        style="height:70px;width:200px;"></a>
-                <hr>
-                <br>
             </div>
         </div>
-    </div>
 
-</div>
-{% endblock %}
+    </div>
+    {% endblock %}
